fix spacing topic list mobile

--- a/common/common.scss
+++ b/common/common.scss
@@ -128,7 +128,7 @@ header .menu-links, header .category-links {
     width: fit-content !important;
     align-self: center;
   };
-  
+
 }
 
 .notAdminView {
@@ -2591,8 +2591,7 @@ body {
           height: 110px;
           .main-link {
             width: 87%;
-            height: 110px;
-
+            
             .link-top-line {
               .topic-statuses {
                 height: 100%;
